# OS-Pulse

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md
assets/: dashboard.html  login.html  styles.css
frontend/: dashboard.html  login.html
frontend/css/: base.css  dashboard.css
frontend/js/: charts.js  dashboard.js  utils.js
src/: auth.rs  collectors.rs  db.rs  handlers.rs  main.rs  models.rs
