[package]
name = "os-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.7"
bollard = "0.17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
http = "1"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
